queue overlap fix

--- a/src/main/resources/templates/home.css
+++ b/src/main/resources/templates/home.css
@@ -45,6 +45,8 @@ header {
 }
 
 main {
+    position: absolute;
+    top: 70px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -58,27 +60,29 @@ section {
 }
 
 #upload-area {
-    /*position: absolute;*/
-    /*top: 0;*/
+    position: fixed;
+    top: 70px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 100px;
-    background-color: #121212;
+    background-color: yellow;
+    /*#121212;*/
 }
 
 #queue {
     width: 100%;
-    /*position: absolute;*/
-    /*top: 100px;*/
-    /*bottom: 0;*/
+    position: absolute;
+    top: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 1px solid #ccc;
+    z-index: -1;
+    padding-bottom: 70px;
     /*padding: 5px;*/
     /*height: fit-content; !* Set a fixed height for scrolling *!*/
     /*overflow-y: auto; !* Enable vertical scrolling *!*/
